ref: refactor category get logic