@@ -1,6 +1,13 @@
 package org.retrade.main.service.impl;
 
+import jakarta.persistence.criteria.CriteriaBuilder;
+import jakarta.persistence.criteria.JoinType;
+import jakarta.persistence.criteria.Predicate;
+import jakarta.persistence.criteria.Root;
 import lombok.RequiredArgsConstructor;
+import org.retrade.common.model.dto.request.QueryFieldWrapper;
+import org.retrade.common.model.dto.request.QueryWrapper;
+import org.retrade.common.model.dto.response.PaginationWrapper;
 import org.retrade.common.model.exception.ValidationException;
 import org.retrade.main.model.dto.response.CategoryResponse;
 import org.retrade.main.model.entity.CategoryEntity;
@@ -8,9 +15,7 @@ import org.retrade.main.repository.CategoryRepository;
 import org.retrade.main.service.CategoryService;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -31,46 +36,82 @@ public class CategoryServiceImpl implements CategoryService {
     }
 
     @Override
-    public List<CategoryResponse> getAllVisibleCategories() {
-        List<CategoryEntity> categories = categoryRepository.findByVisible(true);
-        return categories.stream()
-                .map(this::mapToCategoryResponse)
-                .collect(Collectors.toList());
+    public PaginationWrapper<List<CategoryResponse>> getAllVisibleCategories(QueryWrapper queryWrapper) {
+        return categoryRepository.query(queryWrapper, (param) -> (root, query, criteriaBuilder) -> {
+            List<Predicate> predicates = new ArrayList<>();
+            predicates.add(criteriaBuilder.equal(root.get("visible"), true));
+            return getPredicate(param, root, criteriaBuilder, predicates);
+        }, (items) -> {
+            var list = items.map(this::mapToCategoryResponse).stream().toList();
+            return new PaginationWrapper.Builder<List<CategoryResponse>>()
+                    .setPaginationInfo(items)
+                    .setData(list)
+                    .build();
+        });
     }
 
     @Override
-    public List<CategoryResponse> getCategoriesByParent(String parentId) {
-        CategoryEntity parent = getCategoryEntityById(parentId);
-        List<CategoryEntity> categories = categoryRepository.findByCategoryParent(parent);
-        return categories.stream()
-                .map(this::mapToCategoryResponse)
-                .collect(Collectors.toList());
+    public PaginationWrapper<List<CategoryResponse>> getAllCategories(QueryWrapper queryWrapper) {
+        return categoryRepository.query(queryWrapper, (param) -> (root, query, criteriaBuilder) -> {
+            List<Predicate> predicates = new ArrayList<>();
+            return getPredicate(param, root, criteriaBuilder, predicates);
+        }, (items) -> {
+            var list = items.map(this::mapToCategoryResponse).stream().toList();
+            return new PaginationWrapper.Builder<List<CategoryResponse>>()
+                    .setPaginationInfo(items)
+                    .setData(list)
+                    .build();
+        });
+
     }
 
     @Override
-    public List<CategoryResponse> getRootCategories() {
-        List<CategoryEntity> categories = categoryRepository.findByCategoryParentIsNull();
-        return categories.stream()
-                .filter(CategoryEntity::getVisible)
-                .map(this::mapToCategoryResponse)
-                .collect(Collectors.toList());
+    public PaginationWrapper<List<CategoryResponse>> getCategoriesByParent(String parentId, QueryWrapper queryWrapper) {
+        return categoryRepository.query(queryWrapper, (param) -> (root, query, criteriaBuilder) -> {
+            List<Predicate> predicates = new ArrayList<>();
+            var parentJoin = root.join("categoryParent");
+            predicates.add(criteriaBuilder.equal(parentJoin.get("id"), parentId));
+            return getPredicate(param, root, criteriaBuilder, predicates);
+        }, (items) -> {
+            var list = items.map(this::mapToCategoryResponse).stream().toList();
+            return new PaginationWrapper.Builder<List<CategoryResponse>>()
+                    .setPaginationInfo(items)
+                    .setData(list)
+                    .build();
+        });
+
     }
 
     @Override
-    public List<CategoryResponse> getCategoriesByType(String type) {
-        List<CategoryEntity> categories = categoryRepository.findByVisibleAndType(true, type);
-        return categories.stream()
-                .map(this::mapToCategoryResponse)
-                .collect(Collectors.toList());
+    public PaginationWrapper<List<CategoryResponse>> getRootCategories(QueryWrapper queryWrapper) {
+        return categoryRepository.query(queryWrapper, (param) -> (root, query, criteriaBuilder) -> {
+            List<Predicate> predicates = new ArrayList<>();
+            var parentJoin = root.join("categoryParent", JoinType.LEFT);
+            predicates.add(criteriaBuilder.isNull(parentJoin.get("id")));
+            return getPredicate(param, root, criteriaBuilder, predicates);
+        }, (items) -> {
+            var list = items.map(this::mapToCategoryResponse).stream().toList();
+            return new PaginationWrapper.Builder<List<CategoryResponse>>()
+                    .setPaginationInfo(items)
+                    .setData(list)
+                    .build();
+        });
     }
 
     @Override
-    public List<CategoryResponse> searchCategoriesByName(String name) {
-        List<CategoryEntity> categories = categoryRepository.findByNameContainingIgnoreCase(name);
-        return categories.stream()
-                .filter(CategoryEntity::getVisible)
-                .map(this::mapToCategoryResponse)
-                .collect(Collectors.toList());
+    public PaginationWrapper<List<CategoryResponse>> getCategoriesByType(String type, QueryWrapper queryWrapper) {
+        return categoryRepository.query(queryWrapper, (param) -> (root, query, criteriaBuilder) -> {
+            List<Predicate> predicates = new ArrayList<>();
+            predicates.add(criteriaBuilder.like(root.get("type"), "%" + type + "%"));
+            return getPredicate(param, root, criteriaBuilder, predicates);
+        }, (items) -> {
+            var list = items.map(this::mapToCategoryResponse).stream().toList();
+            return new PaginationWrapper.Builder<List<CategoryResponse>>()
+                    .setPaginationInfo(items)
+                    .setData(list)
+                    .build();
+        });
+
     }
 
     @Override
@@ -90,9 +131,9 @@ public class CategoryServiceImpl implements CategoryService {
         if (categoryNames == null || categoryNames.isEmpty()) {
             return true;
         }
-        
+
         for (String categoryName : categoryNames) {
-            if (!categoryExists(categoryName)) {
+            if (categoryExists(categoryName)) {
                 return false;
             }
         }
@@ -108,7 +149,7 @@ public class CategoryServiceImpl implements CategoryService {
         }
         
         for (String categoryName : categoryNames) {
-            if (!categoryExists(categoryName)) {
+            if (categoryExists(categoryName)) {
                 invalidCategories.add(categoryName);
             }
         }
@@ -117,7 +158,7 @@ public class CategoryServiceImpl implements CategoryService {
 
     @Override
     public boolean categoryExists(String name) {
-        return categoryRepository.existsByName(name);
+        return !categoryRepository.existsByName(name);
     }
 
     private CategoryResponse mapToCategoryResponse(CategoryEntity category) {
@@ -150,5 +191,13 @@ public class CategoryServiceImpl implements CategoryService {
         }
 
         return builder.build();
+    }
+
+    private Predicate getPredicate(Map<String, QueryFieldWrapper> param, Root<CategoryEntity> root, CriteriaBuilder criteriaBuilder, List<Predicate> predicates) {
+        if (param != null && !param.isEmpty()) {
+            Predicate[] defaultPredicates = categoryRepository.createDefaultPredicate(criteriaBuilder, root, param);
+            predicates.addAll(Arrays.asList(defaultPredicates));
+        }
+        return criteriaBuilder.and(predicates.toArray(new Predicate[0]));
     }
 }
